--- a/custom/BI/css/custom1.css
+++ b/custom/BI/css/custom1.css
@@ -2,125 +2,125 @@
 
 
 
+/* BIBSYS DEFAULT */
 
-/*************************************************/
-/* PASTE FROM app-colors.css UNDER THIS LINE     */
-/*  |     |     |     |     |     |     |     |   /
-/*  |     |     |     |     |     |     |     |   /
-/*  V     V     V     V     V     V     V     V   /
+.main._md.md-primoExplore-theme.layout-align-center-start.layout-row.flex {
+    flex-flow: row nowrap;
+}
+/*Aktiver denne hvis fasettene er på høyre side og du ønsker dem på venstre side*/
+
+.main._md.md-primoExplore-theme.layout-align-center-start.layout-row.flex.padded-container {
+   display: -webkit-flex; !* Safari *!
+    -webkit-flex-flow: row-reverse wrap; !* Safari 6.1+ *!
+    display: flex;
+    flex-flow: row-reverse wrap;
+}
 
 
-/* primary color hook */
-/* commenttttt*/
-.prm-primary-color, .result-item-actions .custom-button, .result-item-actions .more-options-button, .md-autocomplete-suggestions .suggestion-scope, md-tab-content .tab-content-header md-input-container md-select-value .md-text {
-  color: #488dc2; }
+/*Aktiver denne hvis fasettene er på venstre side og du ønsker dem på høyre side*/
+/*
+.main._md.md-primoExplore-theme.layout-align-center-start.layout-row.flex.padded-container {
+   display: -webkit-flex; !* Safari *!
+    -webkit-flex-flow: row-reverse wrap; !* Safari 6.1+ *!
+    display: flex;
+    flex-flow: row wrap;
+}
+*/
 
-.prm-primary-bg, prm-spinner.overlay-cover.light-on-dark:after, prm-search-bar {
-  color: white;
-  background-color: #488dc2; }
-  .prm-primary-bg.prm-hue1, prm-spinner.prm-hue1.overlay-cover.light-on-dark:after, prm-topbar .top-nav-bar, prm-search-bar.prm-hue1 {
-    background-color: #3f86bc; }
-  .prm-primary-bg.prm-hue2, prm-spinner.prm-hue2.overlay-cover.light-on-dark:after, prm-search-bar.prm-hue2 {
-    background-color: #3c80b4; }
-  .prm-primary-bg.prm-hue3, prm-spinner.prm-hue3.overlay-cover.light-on-dark:after, prm-search-bar.prm-hue3, md-backdrop.md-opaque {
-    background-color: #3c80b4; }
+/*Endrer farge på toppbanneret (der logoen er)*/
+.prm-primary-bg.prm-hue1, prm-spinner.prm-hue1.overlay-cover.light-on-dark::after, prm-topbar .top-nav-bar, prm-search-bar.prm-hue1 {
+background-color: #032d50; 
+border-color: white;
+}
 
-.prm-primary-border {
-  border-color: #488dc2; }
-  .prm-primary-border.prm-hue1 {
-    border-color: #488dc2; }
-  .prm-primary-border.prm-hue2 {
-    border-color: #488dc2; }
+/*Endrer fargen på feltet bak søkefeltet*/
+.prm-primary-bg, prm-spinner.overlay-cover.light-on-dark::after, prm-search-bar {
+background-color: #00192c; 
+}
 
-.prm-secondary-color, prm-search-bookmark-filter .md-button, prm-topbar .top-nav-bar {
-  color: #A9CDD6; }
-  .prm-secondary-color.prm-hue1, .result-item-actions .custom-button.pin-button, prm-search-bookmark-filter .prm-hue1.md-button, prm-topbar .prm-hue1.top-nav-bar, prm-recomendation-item .media-on-hover .pin-button {
-    color: #45aab4; }
+/*Endrer bakgrunnsfargen på feltet under søkefeltet*/
+md-content, md-content.md-primoExplore-theme {
+  background-color: #ffffff;
+}
 
-.prm-secondary-bg {
-  color: white;
-  background-color: #A9CDD6; }
-  .prm-secondary-bg.prm-hue1, md-tabs md-ink-bar, md-input-container:after, md-radio-button.md-checked .md-on, md-radio-button.md-checked ._md-on {
-    background-color: #45aab4; }
+/*Endrer fargen på tittel i trefflisten og detaljert visning*/
+prm-brief-result .item-title {
+  /* color: #2e8b57; */
+}
 
-.prm-secondary-border {
-  border-color: #A9CDD6; }
-  .prm-secondary-border.prm-hue1, md-select:focus .md-select-value, .md-input-container-dummy > .md-select-dummy:focus .md-select-value,
-  .md-input-focused md-select .md-select-value,
-  .md-input-focused .md-input-container-dummy > .md-select-dummy .md-select-value,
-  md-select:not([disabled]):focus .md-select-value,
-  .md-input-focused
-  md-select:not([disabled]) .md-select-value, md-radio-button.md-checked .md-off, md-radio-button.md-checked ._md-off {
-    border-color: #45aab4; }
+/*Endrer bakgrunnsfarge på antall treff i trefflisten*/
+prm-search-result-list .results-title.layout-row {
+  /* background-color: #2e8b57; */
+}
 
-.prm-background, html, body, prm-search-bar .simple-search-wrapper .search-options:after, prm-search-bar .simple-search-wrapper .search-options md-divider, .__xs prm-facet,
-.__sm prm-facet, .__sm .sidebar,
-.__xs .sidebar, prm-full-view-cont prm-recomendation-item .media-on-hover .pin-button, prm-full-view-cont .recommendations-title:after, prm-full-view-cont .recommendations-title prm-icon, md-virtual-repeat-container#prm-simple-search .md-autocomplete-suggestions md-divider, md-card .card-content-block {
-  background-color: #e9e9e9;
-  border-color: #e1e1e1; }
-  .prm-background.prm-hue1, html.prm-hue1, body.prm-hue1, prm-search-bar .simple-search-wrapper .prm-hue1.search-options:after, prm-search-bar .simple-search-wrapper .search-options md-divider.prm-hue1, .full-view-inner-container + .full-view-aside:before, .__xs prm-facet.prm-hue1,
-  .__sm prm-facet.prm-hue1, .__sm .prm-hue1.sidebar,
-  .__xs .prm-hue1.sidebar, prm-full-view-cont prm-recomendation-item .media-on-hover .prm-hue1.pin-button, prm-full-view-cont .prm-hue1.recommendations-title:after, prm-full-view-cont .recommendations-title prm-icon.prm-hue1, md-virtual-repeat-container#prm-simple-search .md-autocomplete-suggestions md-divider.prm-hue1, .default-tabs[md-border-bottom] > md-tabs-wrapper, md-card .prm-hue1.card-content-block, md-card .card-divider, md-toolbar.default-toolbar,
-  md-toolbar.md-primoExplore-theme.default-toolbar,
-  md-toolbar.default-toolbar:not(.md-menu-toolbar) {
-    background-color: gainsboro;
-    border-color: #d5d5d5; }
-  .prm-background.prm-hue2, html.prm-hue2, body.prm-hue2, .line-clamp-1:after, .line-clamp-2:after, .line-clamp-3:after, .line-clamp-4:after, .line-clamp-5:after, prm-search-result-list .results-title,
-  prm-search-result-list .results-footer, prm-search-result-list md-list-item, prm-search-bar .simple-search-wrapper .prm-hue2.search-options:after, prm-search-bar .simple-search-wrapper .search-options md-divider.prm-hue2, .prm-full-view-dialog, .full-view-inner-container, .__xs prm-facet.prm-hue2,
-  .__sm prm-facet.prm-hue2, .__sm .prm-hue2.sidebar,
-  .__xs .prm-hue2.sidebar, .__xs prm-full-view-cont .recommendations-wrapper,
-  .__sm prm-full-view-cont .recommendations-wrapper, prm-recomendation-item .media-on-hover .pin-button, prm-recomendation-item .media-on-hover .pin-button:hover, prm-full-view-cont prm-recomendation-item .media-on-hover .prm-hue2.pin-button, .recommendations-title:after, prm-full-view-cont .prm-hue2.recommendations-title:after, .__xs prm-full-view-cont .recommendations-title:after,
-  .__sm prm-full-view-cont .recommendations-title:after, .recommendations-title prm-icon, prm-full-view-cont .recommendations-title prm-icon.prm-hue2, .__xs prm-full-view-cont .recommendations-title prm-icon,
-  .__sm prm-full-view-cont .recommendations-title prm-icon, md-virtual-repeat-container#prm-simple-search .md-autocomplete-suggestions md-divider.prm-hue2, md-grid-tile,
-  .tiles-grid-tile, md-grid-tile md-list prm-spinner.overlay-cover:after,
-  md-grid-tile .tile-content prm-spinner.overlay-cover:after,
-  .tiles-grid-tile md-list prm-spinner.overlay-cover:after,
-  .tiles-grid-tile .tile-content prm-spinner.overlay-cover:after, md-card.default-card, md-card .prm-hue2.card-content-block {
-    background-color: #f3f3f3; }
+/*Endrer fargen og skillelinje på postene i trefflisten*/
+prm-search-result-list md-list-item {
+  /* border-bottom: #000000; */
+  /* background-color: #e2e2e2; */
+}
 
-.prm-highlight {
-  background-color: #FFFCC4; }
-  .prm-highlight.prm-hue1, prm-brief-result-container.item-bookmarked, prm-brief-result-container.item-bookmarked:hover {
-    background-color: #FFFCC4; }
+/*Endrer bakgrunnsfargen på trefflisten ved innlastning av nye/flere poster*/
+#mainResults {
+  /* background-color: #e2e2e2;*/
+}
 
-.prm-text, a.a-tag-as-wrapper, .md-button.arrow-link-button .a-tag-as-wrapper.button-content, a.a-tag-as-wrapper:hover, .recommendations-title:hover > span > span.a-tag-as-wrapper, .recommendations-title.hover > span > span.a-tag-as-wrapper, a.a-tag-as-wrapper:focus, .hack-a-tag-unclickable a, .hack-a-tag-unclickable .md-button.arrow-link-button .button-content, .md-button.arrow-link-button .hack-a-tag-unclickable .button-content, prm-search-bar, md-input-container.static-select.md-input-has-value label,
-md-input-container.static-select.md-input-has-value label:not(.md-no-float), .presentable-disabled-inputs md-input-container label, md-toolbar.transparent-toolbar,
-md-toolbar.md-primoExplore-theme.transparent-toolbar,
-md-toolbar.transparent-toolbar:not(.md-menu-toolbar), md-toolbar.default-toolbar,
-md-toolbar.md-primoExplore-theme.default-toolbar,
-md-toolbar.default-toolbar:not(.md-menu-toolbar) {
-  color: #333; }
+/* BIBSYS DEFAULT SLUTT */
 
-.prm-warn, md-input-container.md-required:before, md-input-container.md-input-invalid:before, .required-starlet, prm-breadcrumbs .md-chip-remove-container button:hover md-icon, prm-breadcrumbs .md-chip-remove-container button:focus md-icon, md-input-container.md-input-invalid, .md-chips .md-chip.toggleable-chip .md-chip-remove-container prm-icon.close-button {
-  color: tomato; }
-  .prm-warn-bg, md-input-container.md-input-invalid:after {
-    background-color: tomato; }
+/* OAS */
 
-.prm-links, .md-button.arrow-link-button [link-arrow], md-grid-tile .tile-header .header-link .arrow-icon,
-.tiles-grid-tile .tile-header .header-link .arrow-icon, md-grid-tile .tile-header .header-link:hover,
-.tiles-grid-tile .tile-header .header-link:hover, md-grid-tile .tile-header .md-button,
-.tiles-grid-tile .tile-header .md-button {
-  color: #5C92BD; }
-  .prm-links.prm-links-hover, .md-button.arrow-link-button .prm-links-hover[link-arrow], md-grid-tile .tile-header .header-link .prm-links-hover.arrow-icon,
-  .tiles-grid-tile .tile-header .header-link .prm-links-hover.arrow-icon, md-grid-tile .tile-header .prm-links-hover.header-link:hover,
-  .tiles-grid-tile .tile-header .prm-links-hover.header-link:hover, md-grid-tile .tile-header .prm-links-hover.md-button,
-  .tiles-grid-tile .tile-header .prm-links-hover.md-button {
-    color: #226091; }
-  .prm-links.prm-alt-link, .md-button.arrow-link-button .prm-alt-link[link-arrow], md-grid-tile .tile-header .header-link .prm-alt-link.arrow-icon,
-  .tiles-grid-tile .tile-header .header-link .prm-alt-link.arrow-icon, md-grid-tile .tile-header .prm-alt-link.header-link:hover,
-  .tiles-grid-tile .tile-header .prm-alt-link.header-link:hover, md-grid-tile .tile-header .prm-alt-link.md-button,
-  .tiles-grid-tile .tile-header .prm-alt-link.md-button {
-    color: #45aab4; }
-    .prm-links.prm-alt-link.prm-hue1, prm-main-menu[menu-type="full"] md-card .md-headline, .md-button.arrow-link-button .prm-alt-link.prm-hue1[link-arrow], md-grid-tile .tile-header .header-link .prm-alt-link.prm-hue1.arrow-icon,
-    .tiles-grid-tile .tile-header .header-link .prm-alt-link.prm-hue1.arrow-icon, md-grid-tile .tile-header .prm-alt-link.prm-hue1.header-link:hover,
-    .tiles-grid-tile .tile-header .prm-alt-link.prm-hue1.header-link:hover, md-grid-tile .tile-header .prm-alt-link.prm-hue1.md-button,
-    .tiles-grid-tile .tile-header .prm-alt-link.prm-hue1.md-button {
-      color: #73E9FF; }
+body {
+  Open Sans,sans-serif;
+}
 
-.prm-positive {
-  color: #198A19; }
+h1, h2, h3, h4 {
+  color: #032d50;
+  font-weight: bold;
+}
 
-.prm-notice, prm-search-result-frbr-line a > prm-icon:first-child, prm-search-result-frbr-line .md-button.arrow-link-button .button-content > prm-icon:first-child, .md-button.arrow-link-button prm-search-result-frbr-line .button-content > prm-icon:first-child {
-  color: #CE8015; }
+p {
+  margin: 0 0 0em;
+}
 
-/* primary color hook end*/
+/* Bakgrunnsfarge utenfor bokser */
+.main._md.md-primoExplore-theme.layout-align-center-start.layout-row.flex {
+    flex-flow: row nowrap;
+    background-color: #ffffff;
+}
+
+/* Setter bakgrunnsfarge på innholdsboksene på førstesiden */
+md-card.default-card md-card-content, prm-featured-result-item md-card md-card-content {
+  background-color: #ffffff;
+}
+
+/* Setter bakrgrunnsfarge på oversiden av innholdsboksene på førstesiden */
+md-card.default-card md-card-title:not(#featuredResultTitle), prm-featured-result-item md-card md-card-title:not(#featuredResultTitle) {
+  background-color: #ffffff;
+}
+
+/* Setter fontfarge og -størrelse på elementer i toppmenyen */
+.layout-align-center-center>*, .layout-align-end-center>*, .layout-align-space-around-center>*, .layout-align-space-between-center>*, .layout-align-start-center>* {
+    color: #ffffff;
+    font-size: 15px;
+}
+
+/* INNHOLDSBOKSER FØRSTESIDEN */
+
+md-card.default-card, prm-featured-result-item md-card {
+    font-size: 15px;
+  }
+
+/* Browzine styles */
+.browzine-icon  {
+  margin-right:2px;
+}
+
+.browzine-external-link {
+  width:15px;
+  height:15px;
+  min-width:15px;
+  min-height:15px;
+}
+/* Browzine styles end*/
+
+
+
